# AdminIA

./: .env  .env.example  .gitignore  MAA_session_jour1_jour2.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: context.py  core.py  planner.py
data/: db.py
data/kb/: cnss.json  dgi.json  ompic.json  rc.json  sarl_au.json
docs/: JOUR1.md  JOUR2.md  JOUR3.md  JOUR4.md  JOUR5.md  JOUR6.md  JOUR7.md  JOUR8.md
services/: i18n.py  kb_loader.py  llm.py  mlflow_tracker.py  rag.py  recommender.py  session_manager.py
tests/: conftest.py  test_doc_gen.py  test_i18n.py  test_mlflow_tracker.py  test_pdf_bilingual.py  test_planner.py  test_rag.py  test_recommender.py  test_session_manager.py
tools/: doc_gen.py  pdf_bilingual.py
