[project]
name = "maa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "chromadb>=0.4.0",
    "fpdf2>=2.7.0",
    "python-bidi>=0.4.2",
    "mlflow>=2.12.0",
    "openai>=1.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
